# mmat

./: .dockerignore  .env.example  .gitignore  CONVERSATION.md  Cargo.toml  Dockerfile  FEEDBACK.md  IMPLEMENTATION_BACKLOG.md  README.md  bacon.toml  clippy.toml  docker-compose.yml  mmat.example.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/coordinator/: Cargo.toml
crates/coordinator/src/: contract.rs  error.rs  lib.rs  registry.rs  retrieval.rs  role.rs  runtime.rs  scheduler.rs
crates/coordinator/tests/: integration.rs
crates/db/: Cargo.toml
crates/db/migrations/2026-05-14-000001_init/: down.sql  up.sql
crates/db/src/: artefact.rs  event.rs  lane.rs  lib.rs  memory.rs  models.rs  project.rs  schema.rs
crates/db/tests/: integration.rs
crates/event-stream/: Cargo.toml
crates/event-stream/src/: event.rs  event_bus.rs  event_store.rs  lib.rs
crates/event-stream/tests/: integration.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  error.rs  executor.rs  lib.rs  message.rs  tool.rs
crates/memory/: Cargo.toml
crates/memory/src/: artefact_store.rs  attention.rs  embedding.rs  error.rs  lib.rs  librarian.rs  provenance.rs  qdrant.rs  store.rs  types.rs  vector_backend.rs
crates/memory/tests/: integration.rs
crates/migration/: Cargo.toml
crates/migration/src/: main.rs
crates/process/: Cargo.toml
crates/process/src/: command.rs  lib.rs
crates/project/: Cargo.toml
crates/project/src/: discovery.rs  lib.rs  scaffold.rs  worktree.rs
crates/roles/: Cargo.toml
crates/roles/src/: architect.rs  artefacts.rs  auditor.rs  intent_lead.rs  lib.rs  ops_manager.rs  project_manager.rs  reviewer.rs  scholar.rs  tests.rs  tooling.rs  tools.rs  worker.rs
crates/roles/src/tests/tests/: auditor_tests.rs
crates/roles/tests/: auditor_tests.rs  role_flow_tests.rs
crates/workbench/: Cargo.toml  Dioxus.toml
crates/workbench/assets/: main.css  tailwind.css
crates/workbench/src/: app.rs  cli.rs  main.rs
crates/workbench/src/api/: chat.rs  mod.rs  projects.rs
crates/workbench/src/components/: app.rs  mod.rs  projects.rs
crates/workbench/src/components/dialog/: component.rs
crates/workbench/src/components/sheet/: component.rs
crates/workbench/src/ui/: header.rs  mod.rs
crates/workbench/src/ui/app/: mod.rs  style.css
crates/workbench/src/ui/chat/: mod.rs  style.css
crates/workbench/static/: app.js  index.html  style.css
crates/workbench/tests/: api.rs
crates/workbench/tests/common/: mod.rs
docs/: accessibility-checklist.md
openspec/changes/2026-05-03-pipeline-domain-delivery/: design.md  proposal.md  tasks.md
openspec/changes/artefact-storage-project-output/: proposal.md  tasks.md
openspec/changes/build-scoped-knowledge-workflow/: design.md
openspec/changes/conversation-lanes-action-requests/: tasks.md
openspec/changes/coordinator/: proposal.md  tasks.md
openspec/changes/delivery/: tasks.md
openspec/changes/frontend-ux-polish/: design.md  proposal.md  tasks.md
openspec/changes/governance/: tasks.md
openspec/changes/host-workdir-project-paths/: proposal.md  tasks.md
openspec/changes/memory-core/: design.md  tasks.md
openspec/changes/migrate-to-postgresql/: design.md  tasks.md
openspec/changes/postgres-only-workbench-persistence/: tasks.md
openspec/changes/role-llm-capability-readiness/: tasks.md
openspec/changes/runtime-ui-integration/: proposal.md  tasks.md
openspec/changes/understanding/: tasks.md
openspec/changes/workbench-core-usability/: proposal.md  tasks.md
openspec/changes/workbench-packaging-operations/: design.md  proposal.md  tasks.md
openspec/changes/workbench-static-assets/: proposal.md  tasks.md
openspec/changes/workbench-test-coverage/: tasks.md
openspec/specs/architect/: spec.md
openspec/specs/architectural-backflow/: spec.md
openspec/specs/artefact-store/: spec.md
openspec/specs/auditor/: spec.md
openspec/specs/contract-system/: spec.md
openspec/specs/conversation-lanes/: spec.md
openspec/specs/discovery-workflow/: spec.md
openspec/specs/domain-mapped-planning/: spec.md
openspec/specs/event-bus/: spec.md
openspec/specs/event-store/: spec.md
openspec/specs/graph-based-delivery/: spec.md
openspec/specs/intent-lead/: spec.md
openspec/specs/interactive-runtime/: spec.md
openspec/specs/librarian/: spec.md
openspec/specs/liveview-ui/: spec.md
openspec/specs/memory-store/: spec.md
openspec/specs/memory-types/: spec.md
openspec/specs/message-queue/: spec.md
openspec/specs/project-artefact-output/: spec.md
openspec/specs/project-discovery/: spec.md
openspec/specs/project-list-api/: spec.md
openspec/specs/project-manager/: spec.md
openspec/specs/project-ui/: spec.md
openspec/specs/provenance-engine/: spec.md
openspec/specs/retrieval-planner/: spec.md
openspec/specs/role-capability-readiness/: spec.md
openspec/specs/role-registry/: spec.md
openspec/specs/runtime/: spec.md
openspec/specs/scheduler/: spec.md
openspec/specs/scoped-knowledge-groups/: spec.md
openspec/specs/semantic-event-types/: spec.md
openspec/specs/solution-branch-selection/: spec.md
openspec/specs/step-interrupt/: spec.md
openspec/specs/tool-execution/: spec.md
src/: artifacts.rs  build.rs  error.rs  lib.rs  main.rs  models.rs  parsing.rs  project.rs  prompts.rs  run_store.rs  runtime.rs  workflow.rs
src/deliver/: artifacts.rs  delivery_graph.rs  engine.rs  ipc.rs  mod.rs  models.rs  queue.rs
src/liveview/: assets.rs  components.rs  event.rs  logging.rs  mod.rs  server.rs  state.rs  translator.rs
src/plan/: architect.rs  backflow.rs  discovery.rs  domain_map.rs  knowledge.rs  mod.rs  parser.rs  solutions.rs
src/runtime/: mod.rs
src/workflow/: architect.rs  discovery.rs  execution.rs  graph.rs  knowledge.rs  logging.rs  mod.rs  parser.rs  solutions.rs  steps.rs  tasks.rs
src/workflow_old/: architect.rs  discovery.rs  knowledge.rs  mod.rs  solutions.rs
src/ws/: event.rs  layer.rs  mod.rs  server.rs  translator.rs  ui_state.rs
web/: Cargo.toml  app.css  index.html  style.css
web/src/: lib.rs
(+140 files in other folders)
