[workspace]
resolver = "3"
members = [
  "crates/coordinator",
  "crates/event-stream",
  "crates/llm",
  "crates/memory",
  "crates/migration",
  "crates/process",
  "crates/project",
  "crates/roles",
  "crates/workbench"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/itpetey/mmat"
license-file = "LICENCE"

[workspace.dependencies]
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false }
chrono = { version = "0.4", default-features = false }
futures-util = { version = "0.3", default-features = false }
parking_lot = { version = "0.12", default-features = false }
qdrant-client = { version = "1.17", default-features = false }
reqwest = { version = "0.13", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.8", default-features = false }
tempfile = { version = "3.27", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.52", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
uuid = { version = "1.23", default-features = false }
wiremock = { version = "0.6", default-features = false }

[workspace.lints.clippy]
# Prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

# Prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

# Disallow unsafe memory patterns
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Disallow risky arithmetic patterns
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"

# Disallow lazy risk taking
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
