[workspace]
resolver = "3"
members = [
  "crates/coordinator",
  "crates/event-stream",
  "crates/llm",
  "crates/memory",
  "crates/migration",
  "crates/process",
  "crates/project",
  "crates/roles",
  "crates/workbench"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/itpetey/mmat"
license-file = "LICENCE"

[workspace.dependencies]
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.8", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.6", default-features = false }
futures-util = { version = "0.3", default-features = false }
parking_lot = { version = "0.12", default-features = false }
qdrant-client = { version = "1.17", default-features = false }
reqwest = { version = "0.13", default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.8", default-features = false }
tempfile = { version = "3.27", default-features = false }
thiserror = { version = "2.0", default-features = false }
toml = { version = "0.8", default-features = false }
tokio = { version = "1.52", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
uuid = { version = "1.23", default-features = false }
wiremock = { version = "0.6", default-features = false }

[workspace.lints.clippy]
get_unwrap = "warn"
indexing_slicing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
# Prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
todo = "warn"
unchecked_time_subtraction = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

assertions_on_result_states = "warn"
# Prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
unused_result_ok = "warn"

# Prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

# Disallow unsafe memory patterns
mem_forget = "warn"
multiple_unsafe_ops_per_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

cast_sign_loss = "warn"
# Disallow risky arithmetic patterns
float_cmp = "warn"
float_cmp_const = "warn"
invalid_upcast_comparisons = "warn"
lossy_float_literal = "warn"

dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
iter_not_returning_iterator = "warn"
# Disallow lazy risk taking
rc_mutex = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
