[workspace]
resolver = "3"
members = [
  "crates/coordinator",
  "crates/db",
  "crates/event-stream",
  "crates/llm",
  "crates/memory",
  "crates/process",
  "crates/project",
  "crates/roles",
  "crates/workbench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/itpetey/mmat"
license-file = "LICENCE"

[workspace.dependencies.anyhow]
version = "1.0"
default-features = false

[workspace.dependencies.async-trait]
version = "0.1"
default-features = false

[workspace.dependencies.axum]
version = "0.8"
default-features = false

[workspace.dependencies.chrono]
version = "0.4"
default-features = false

[workspace.dependencies.clap]
version = "4.6"
default-features = false

[workspace.dependencies.diesel]
version = "2.3"
default-features = false

[workspace.dependencies.diesel-async]
version = "0.9"
default-features = false

[workspace.dependencies.dioxus]
version = "0.7"
default-features = false

[workspace.dependencies.futures-util]
version = "0.3"
default-features = false

[workspace.dependencies.mmat-db]
path = "crates/db"

[workspace.dependencies.parking_lot]
version = "0.12"
default-features = false

[workspace.dependencies.qdrant-client]
version = "1.18"
default-features = false

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false

[workspace.dependencies.rusqlite]
version = "0.39"
default-features = false

[workspace.dependencies.serde]
version = "1.0"
default-features = false

[workspace.dependencies.serde_json]
version = "1.0"
default-features = false

[workspace.dependencies.sqlx]
version = "0.8"
default-features = false

[workspace.dependencies.tempfile]
version = "3.27"
default-features = false

[workspace.dependencies.thiserror]
version = "2.0"
default-features = false

[workspace.dependencies.tokio]
version = "1.52"
default-features = false

[workspace.dependencies.toml]
version = "1.1"
default-features = false

[workspace.dependencies.tracing]
version = "0.1"
default-features = false

[workspace.dependencies.tracing-subscriber]
version = "0.3"
default-features = false

[workspace.dependencies.uuid]
version = "1.23"
default-features = false

[workspace.dependencies.wiremock]
version = "0.6"
default-features = false

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
cast_sign_loss = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
expl_impl_clone_on_copy = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
indexing_slicing = "warn"
infallible_try_from = "warn"
invalid_upcast_comparisons = "warn"
iter_not_returning_iterator = "warn"
large_futures = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_unsafe_ops_per_block = "warn"
panic = "warn"
panic_in_result_fn = "warn"
rc_mutex = "warn"
string_slice = "warn"
todo = "warn"
unchecked_time_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unreachable = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
