[package]
name = "coordinator"
version.workspace = true
edition.workspace = true

[dependencies]
event-stream = { path = "../event-stream" }
memory = { path = "../memory" }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
qdrant-client = { workspace = true }
tempfile = { workspace = true }
