[package]
name = "mmat-coordinator"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
mmat-event-stream = { path = "../event-stream" }
mmat-memory = { path = "../memory" }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
qdrant-client.workspace = true
tempfile.workspace = true
