[package]
name = "mmat-db"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
diesel = { workspace = true, features = ["serde_json", "uuid"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
mmat-event-stream.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
