[package]
name = "event-stream"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
