[package]
name = "mmat-event-stream"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
parking_lot.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tempfile.workspace = true
