[package]
name = "memory"
version.workspace = true
edition.workspace = true

[dependencies]
event-stream = { path = "../event-stream" }
llm = { path = "../llm" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
rusqlite = { workspace = true }
qdrant-client = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
