[package]
name = "mmat-migration"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["now"] }
mmat-event-stream = { path = "../event-stream" }
rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
sqlx = { workspace = true, features = [
  "derive",
  "postgres",
  "runtime-tokio",
] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
