[package]
name = "mmat-migration"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
sqlx = { workspace = true, features = [
  "derive",
  "postgres",
  "runtime-tokio",
] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
