[package]
name = "mmat-process"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["process"] }
