[package]
name = "mmat-project"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread"] }
tracing.workspace = true
