[package]
name = "mmat-roles"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
mmat-coordinator = { path = "../coordinator" }
mmat-event-stream = { path = "../event-stream" }
mmat-llm = { path = "../llm" }
mmat-memory = { path = "../memory" }
mmat-project = { path = "../project" }
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time"
] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
qdrant-client.workspace = true
tempfile.workspace = true
wiremock.workspace = true
