[package]
name = "mmat-workbench"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
axum = { workspace = true, features = [
  "form",
  "http1",
  "json",
  "query",
  "tokio"
] }
clap = { workspace = true, features = [
  "cargo",
  "derive",
  "env",
  "help",
  "std",
  "usage"
] }
futures-util.workspace = true
mmat-coordinator = { path = "../coordinator" }
mmat-event-stream = { path = "../event-stream" }
mmat-llm = { path = "../llm" }
mmat-memory = { path = "../memory" }
mmat-project = { path = "../project" }
mmat-roles = { path = "../roles" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
toml = { workspace = true, features = ["parse"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tempfile.workspace = true
