[package]
name = "mmat-workbench"
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env", "std"], optional = true }
dioxus = { workspace = true, features = [
  "devtools",
  "fullstack",
  "launch",
  "lib",
  "logger",
  "macro"
] }
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
mmat-db = { path = "../db", optional = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync"
], optional = true }
toml = { workspace = true, features = ["parse", "serde"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["web"]
server = [
  "dep:anyhow",
  "dep:axum",
  "dep:clap",
  "dep:mmat-db",
  "dep:tokio",
  "dep:toml",
  "dep:tracing",
  "dep:tracing-subscriber",
  "dioxus/server"
]
web = ["dioxus/web"]
